# University-ERP-

./: .env.example  .gitignore  README.md  main.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/access_control/: models.py
apps/access_control/migrations/: 0001_initial.py
apps/accreditation/: models.py  services.py
apps/accreditation/migrations/: 0001_initial.py
apps/admissions/: models.py  tasks.py  urls.py  views.py
apps/alumni/: models.py
apps/alumni/migrations/: 0001_initial.py
apps/compliance/: __init__.py  apps.py  models.py
apps/compliance/migrations/: 0001_initial.py
apps/core/: exceptions.py  health_urls.py  metrics_urls.py  middleware.py  models.py  tasks.py  urls.py
apps/core/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/courses/: lms_models.py  models.py  services.py
apps/courses/migrations/: 0001_initial.py
apps/discipline/: models.py
apps/discipline/migrations/: 0001_initial.py
apps/documents/: models.py
apps/documents/migrations/: 0001_initial.py
apps/examinations/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/examinations/migrations/: 0001_initial.py
apps/finance/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/finance/migrations/: 0001_initial.py
apps/hardware/: models.py
apps/hardware/migrations/: 0001_initial.py
apps/health/: models.py
apps/health/migrations/: 0001_initial.py
apps/hostel/: models.py
apps/hostel/migrations/: 0001_initial.py
apps/hr/: models.py  services.py  tasks.py
apps/hr/migrations/: 0001_initial.py
apps/institutional/: models.py  urls.py  views.py
apps/integrations/: jamb_caps.py  nimc.py  remita.py
apps/ml/: schemas.py  urls.py
apps/notifications/: sms.py
apps/nysc/: models.py  services.py
apps/performance/: models.py
apps/postgraduate/: models.py
apps/records/: models.py  services.py
apps/research/: models.py
apps/students/: models.py  services.py  urls.py  views.py
apps/tenants/: models.py  urls.py
apps/timetable/: models.py
apps/users/: models.py  multirole.py  permissions.py  serializers.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wschannels.py
config/settings/: base.py  development.py  minimal_migrate.py  production.py  production_security.py  staging.py  standalone_test.py  test_migrate.py
docs/: FLAGGED_GAPS.md
docs/uat/: README.md
frontend/: package.json  tailwind.config.ts
frontend/public/: manifest.json  sw.js
infrastructure/ansible/: README.md
infrastructure/docker/: Dockerfile  docker-compose.yml  init-db.sql
infrastructure/k3s/: database.yaml  deployment.yaml  ingress.yaml
infrastructure/monitoring/: prometheus.yml
tests/unit/: test_multirole.py  test_permissions.py  test_users_models.py
(+65 files in other folders)
